--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -1,3 +1,52 @@
 {
-  "appName": "PurplePay"
+  "appName": "WotNot",
+  "login": {
+    "welcome_message_1": "Welcome back",
+    "welcome_message_2": "Sign in and build come cool bots",
+    "sign_in_as": "Sign in as %s",
+    "email": "Email",
+    "password": "Password"
+  },
+  "button": {
+    "sign_in": "Sign In",
+    "join_conversation": "Join Conversation",
+    "add_labels": "Add Labels",
+    "forgot_password": "Forgot Password?"
+  },
+  "switch": {"on": "ON", "off": "OFF"},
+  "chat": {
+    "tab_you": "(%s) You",
+    "tab_assigned": "(s%) Assigned",
+    "tab_unassigned": "(s%) Unassigned",
+    "chat": "Chat",
+    "setting": "Setting",
+    "join_conversation_message": "This conversation is not assigned to you. In order to write a message, click 'Join Conversation",
+    "saved_reply": "Saved Reply",
+    "calendar": "Calendar",
+    "attachment": "Attachment",
+    "send_a_message": "Send a message",
+    "search_reply": "Search Reply",
+    "user_info": {
+      "qualification": "Qualification",
+      "name": "Name",
+      "email": "Email",
+      "phone": "Phone",
+      "url": "URL",
+      "city": "City",
+      "zip_code": "Zip Code",
+      "country_code": "Country code",
+      "system_details": "System Details"
+    },
+    "change_assignee": "Change Assignee",
+    "close_conversation": "Close Conversation",
+    "search_from_teams_and_teammates": "Search from teams and teammates",
+    "teammates": "Teammates",
+    "team": "Team",
+    "active_status": "Active Status",
+    "active_status_message": "Your status will determine whether the chats need to be assigned to you or not.",
+    "account": "Account",
+    "language": "Language",
+    "notifications": "Notifications",
+    "logout": "Logout"
+  }
 }
