Added API for login | change in UI | added loader | added toast for error | added redux

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -53,5 +53,9 @@
     "language": "Language",
     "notifications": "Notifications",
     "logout": "Logout"
+  },
+  "error": {
+    "errEmail": "Valid email is required.",
+    "errPwd": "Password must be greater than 5 characters"
   }
 }
