--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -6,15 +6,26 @@
     "sign_in_as": "Sign in as %s",
     "email": "Email",
     "password": "Password",
-    "forgotPWd":"Forgot Password",
-    "forgotPWdNote":"Don't worry. Resetting your password is easy, just tell us the email address you registered with WotNot."
+    "forgotPWd": "Forgot Password",
+    "forgotPWdNote": "Don't worry. Resetting your password is easy, just tell us the email address you registered with WotNot.",
+    "twoFacAuthHeader": "Enable 2FA Authentication",
+    "twoFacAuthHeaderNote": "Download a authenticator app on your mobile device, and scan this QR code to set up your account.",
+    "enter_the_code": "Enter the code",
+    "enter_2fa_code": "Enter 2FA Code",
+    "enter_2fa_code_note": "Open the authenticator app on your mobile device and enter the 2FA code associated with your WotNot account.",
+    "recover_2fa_code": "Recover 2FA Code",
+    "recover_2fa_code_note": "If you have lost your mobile device in which 2FA was enabled, just enter the recovery codes that were provided during setup to add a new device.",
+    "enter_recovery_code": "Enter the recovery code",
+    "2fa_code":"2FA Code"
   },
   "button": {
     "sign_in": "Sign In",
     "join_conversation": "Join Conversation",
     "add_labels": "Add Labels",
     "forgot_password": "Forgot Password?",
-    "send_me_instructions":"Send me instructions"
+    "send_me_instructions": "Send me instructions",
+    "verify_code": "Verify code",
+    "enter_recovery_code":"Enter recovery code"
   },
   "switch": {"on": "ON", "off": "OFF"},
   "tab": {
@@ -59,6 +70,9 @@
   },
   "error": {
     "errEmail": "Valid email is required.",
-    "errPwd": "Password must be greater than 5 characters"
+    "errPwd": "Password must be greater than 5 characters",
+    "errEmpty": "This field cannot be empty",
+    "errTwoFACode": "Please enter 6-digit code",
+    "errValidRecoveryCode":"Enter valid recovery code"
   }
 }
