Recovery code page added

--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -16,7 +16,9 @@
     "recover_2fa_code": "Recover 2FA Code",
     "recover_2fa_code_note": "If you have lost your mobile device in which 2FA was enabled, just enter the recovery codes that were provided during setup to add a new device.",
     "enter_recovery_code": "Enter the recovery code",
-    "2fa_code":"2FA Code"
+    "2fa_code":"2FA Code",
+    "recover_code_note":"Print or save these recovery codes in a safe place to be able to recover your account if you lose your mobile device.",
+    "2fa_enabled_msg":"2FA authentication has been enabled!"
   },
   "button": {
     "sign_in": "Sign In",
@@ -25,7 +27,9 @@
     "forgot_password": "Forgot Password?",
     "send_me_instructions": "Send me instructions",
     "verify_code": "Verify code",
-    "enter_recovery_code":"Enter recovery code"
+    "enter_recovery_code":"Enter recovery code",
+    "done":"Done",
+    "copy_code":"Copy recovery codes"
   },
   "switch": {"on": "ON", "off": "OFF"},
   "tab": {
