--- a/src/locales/languages/en.json
+++ b/src/locales/languages/en.json
@@ -1,54 +1,56 @@
 {
   "appName": "WotNot",
   "login": {
-    "welcome_message_1": "Welcome back",
-    "welcome_message_2": "Sign in and build come cool bots",
+    "WELCOME_BACK_MSG": "Welcome back",
+    "SIGN_IN_WELCOME_SUB_TEXT": "Sign in and build some cool bots",
     "sign_in_as": "Sign in as %s",
-    "email": "Email",
-    "password": "Password",
-    "forgotPWd": "Forgot Password",
-    "forgotPWdNote": "Don't worry. Resetting your password is easy, just tell us the email address you registered with WotNot.",
-    "twoFacAuthHeader": "Enable 2FA Authentication",
-    "twoFacAuthHeaderNote": "Download a authenticator app on your mobile device, and scan this QR code to set up your account.",
-    "enter_the_code": "Enter the code",
-    "enter_2fa_code": "Enter 2FA Code",
-    "enter_2fa_code_note": "Open the authenticator app on your mobile device and enter the 2FA code associated with your WotNot account.",
-    "recover_2fa_code": "Recover 2FA Code",
-    "recover_2fa_code_note": "If you have lost your mobile device in which 2FA was enabled, just enter the recovery codes that were provided during setup to add a new device.",
-    "enter_recovery_code": "Enter the recovery code",
-    "2fa_code": "2FA Code",
-    "recover_code_note": "Print or save these recovery codes in a safe place to be able to recover your account if you lose your mobile device.",
-    "2fa_enabled_msg": "2FA authentication has been enabled!"
+    "EMAIL_LABEL": "Email",
+    "PASSWORD_LABEL": "Password",
+    "FORGOT_PASSWORD_LABEL": "Forgot Password?",
+    "FORGOT_PASSWORD_DESCRIPTION": "Don't worry. Resetting your password is easy, just tell us the email address you registered with {{ORGANISATION_NAME}}.",
+    "2FA_SETUP_SCREEN_SETUP_HEADING": "Enable 2FA Authentication",
+    "2FA_SETUP_SCREEN_SETUP_SUB_HEADNG": "Download a authenticator app on your mobile device, and scan this QR code to set up your account.",
+    "2FA_SETUP_SCREEN_SETUP_CODE_INPUT": "Enter the code",
+    "2FA_TOTP_SCREEN_HEADING": "Enter 2FA Code",
+    "2FA_TOTP_SCREEN_SUB_HEADING": "Open the authenticator app on your mobile device and enter the 2FA code associated with your {{ORGANISATION_NAME}} account.",
+    "RECOVERY_SCREEN_HEADER_TEXT": "Recover 2FA Code",
+    "RECOVERY_SCREEN_SUBHEADER_TEXT": "If you have lost your mobile device in which 2FA was enabled, just enter the recovery codes that were provided during setup to add a new device.",
+    "RECOVERY_SCREEN_RECOVERY_CODE_INPUT_LABEL": "Enter the recovery code",
+    "2FA_TOTP_SCREEN_CODE_INPUT": "2FA Code",
+    "SETUP_COMPLETION_SUB_HEADING": "Print or save these recovery codes in a safe place to be able to recover your account if you lose your mobile device.",
+    "2FA_SETUP_SCREEN_SETUP_COMPLETION_ALERT": "2FA authentication has been enabled!"
   },
   "button": {
-    "sign_in": "Sign In",
-    "join_conversation": "Join Conversation",
+    "EMAIL_SIGN_IN_TEXT": "Sign In",
+    "JOIN_CONVERSATION_BUTTON_TEXT": "Join Conversation",
     "add_labels": "Add Labels",
-    "forgot_password": "Forgot Password?",
-    "send_me_instructions": "Send me instructions",
-    "verify_code": "Verify code",
-    "enter_recovery_code": "Enter recovery code",
-    "done": "Done",
-    "copy_code": "Copy recovery codes"
+    "FORGOT_PASSWORD_TITLE": "Forgot Password?",
+    "SEND_ME_INSTRUCTIONS_BUTTON": "Send me instructions",
+    "RECOVERY_SCREEN_VERIFY_BTN_TEXT": "Verify code",
+    "2FA_TOTP_SCREEN_ENTER_RECOVERY_CODE": "Enter recovery code",
+    "2FA_SETUP_SCREEN_SETUP_DONE_BUTTON": "Done",
+    "RECOVERY_CODES_BUTTON": "Download recovery codes",
+    "GOOGLE_SIGN_IN_TEXT": "Sign in with Google"
   },
-  "switch": {"on": "ON", "off": "OFF"},
+  "switch": {"TOGGEL_SWITCH_ON": "ON", "TOGGEL_SWITCH_OFF": "OFF"},
   "tab": {
-    "chat": "Chat",
-    "setting": "Settings",
-    "you": "You",
-    "assigned": "Assigned",
-    "unassigned": "Unassigned",
-    "closed": "Closed"
+    "LIVE_CHAT_MENU": "Live Chat",
+    "SETTINGS_MENU": "Settings",
+    "You": "You",
+    "Assigned": "Assigned",
+    "Unassigned": "Unassigned",
+    "Open": "Open",
+    "Closed": "Closed"
   },
   "chat": {
-    "join_conversation_message": "This conversation is not assigned to you.\nTo send a message, click the button below and send your message.",
+    "JOIN_CONVERSATION_TEXT": "This conversation is not assigned to you.\nTo send a message, click the button below and send your message.",
     "saved_reply": "Saved Reply",
     "calendar": "Calendar",
     "attachment": "Attachment",
     "send_a_message": "Send a message",
     "search_reply": "Search Reply",
     "user_info": {
-      "qualification": "Qualification",
+      "CONTACT_LIST_TITLE": "Qualification Details",
       "name": "Name",
       "email": "Email",
       "phone": "Phone",
@@ -56,29 +58,34 @@
       "city": "City",
       "zip_code": "Zip Code",
       "country_code": "Country code",
-      "system_details": "System Details"
+      "system_details": "System Details",
+      "LABELS": "Labels"
     },
     "change_assignee": "Change Assignee",
     "close_conversation": "Close Conversation",
     "search_from_teams_and_teammates": "Search from teams and teammates",
     "teammates": "Teammates",
-    "team": "Team"
+    "team": "Team",
+    "MARK_DONE": "Mark Done",
+    "TEAMS_MENU": "Teams",
+    "TEAMMATES_MENU": "Teammates",
+    "SEARCH_TEAM_PLACEHOLDER": "Search from"
   },
   "settings": {
     "active_status": "Active Status",
     "active_status_message": "Your status will determine whether the chats need to be assigned to you or not.",
-    "account": "Account",
-    "language": "Language",
-    "notifications": "Notifications",
-    "logout": "Logout",
-    "help_desk": "Help Desk"
+    "ACCOUNT_MENU": "Account",
+    "CHANGE_LANGUAGE_LABEL": "Change Language",
+    "NOTIFICATION_HEADER": "Notifications & Sound",
+    "LOGOUT": "Logout",
+    "HELP_DESK": "Help Desk"
   },
   "error": {
-    "errEmail": "Valid email is required.",
-    "errPwd": "Password must be greater than 5 characters",
-    "errEmpty": "This field cannot be empty",
-    "errTwoFACode": "Please enter 6-digit code",
-    "errValidRecoveryCode": "Enter valid recovery code"
+    "EMAIL_VALIDATION_MESSAGE": "Valid email is required",
+    "PASSWORD_VALIDATION_MESSAGE": "Password must be greater than 5 characters",
+    "2FA_SETUP_SCREEN_SETUP_CODE_INPUT_ERROR": "This field cannot be empty",
+    "2FA_SETUP_SCREEN_SETUP_CODE_INPUT_LENGTH_ERROR": "Please enter 6-digit code",
+    "RECOVERY_SCREEN_RECOVERY_CODE_ERROR_TEXT": "Enter valid recovery code",
   },
   "help_disk": {
     "read_help": "Read Help Articles",
@@ -87,5 +94,14 @@
     "watch_tutorial": "Watch Tutorial Videos",
     "product_road_map": "Product Roadmap",
     "what_new": "What's New"
-  }
+  },
+  "NOTIFICATION_SWITCH_LABEL": "Enable Notifications",
+  "IS_HUMAN_HANDOVER_TRIGGER_CHECKBOX": "When a human handover is triggered",
+  "IS_NEW_MESSAGE_CHECKBOX": "When a new message from a existing chat is received",
+  "PLAY_SOUND_FOR_NOTIFICATION": "When I receive notification play sound",
+  "No conversation found": "No conversation found",
+  "NO_TEAM_FOUND_MESSAGE": "No teams found",
+  "SLACK_LIVE_CHAT_PANEL_NO_TEAMMATES_FOUND": "No teammates found",
+  "SEARCH_PLACEHOLDER": "Search",
+  "PLACEHOLDER_REPLY": "Type your message..."
 }
