--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,6 @@
 {
   "appName": "WotNot",
+  "orgName":"WoNot",
   "login": {
     "WELCOME_BACK_MSG": "Welcome back",
     "SIGN_IN_WELCOME_SUB_TEXT": "Sign in and build some cool bots",
